package schema

import (
	"errors"
	"fmt"
	"os"
	"strings"
)

// ProtoTypeLoader loads types from protobuf definitions
type ProtoTypeLoader struct {
	// Will contain the necessary fields for working with protobuf descriptors
}

// NewProtoTypeLoader creates a new proto type loader
func NewProtoTypeLoader() *ProtoTypeLoader {
	return &ProtoTypeLoader{}
}

// ProtoType represents a type defined in protobuf
type ProtoType struct {
	Name      string
	Fields    map[string]ProtoField
	ProtoFile string
	ProtoPath string
	IsMessage bool
	IsEnum    bool
	IsOneOf   bool
}

// ProtoField represents a field in a protobuf message
type ProtoField struct {
	Name         string
	Type         string
	TypeName     string // For message types
	IsRepeated   bool
	IsMap        bool
	MapKeyType   string
	MapValueType string
}

// LoadProtoFile loads a .proto file and registers its types with the type system
func (ptl *ProtoTypeLoader) LoadProtoFile(protoFile string, ts *TypeSystem) error {
	// This is a placeholder that will be implemented when protobuf support is added
	if _, err := os.Stat(protoFile); os.IsNotExist(err) {
		return fmt.Errorf("proto file does not exist: %s", protoFile)
	}

	// For now, we'll just return a not implemented error
	return errors.New("proto loading not implemented yet")
}

// ConvertProtoTypeToEffectusType converts a protobuf type to an Effectus type
func (ptl *ProtoTypeLoader) ConvertProtoTypeToEffectusType(protoType string) *Type {
	// This is a placeholder for future implementation
	switch protoType {
	case "string":
		return &Type{PrimType: TypeString}
	case "int32", "int64", "sint32", "sint64", "fixed32", "fixed64", "sfixed32", "sfixed64":
		return &Type{PrimType: TypeInt}
	case "float", "double":
		return &Type{PrimType: TypeFloat}
	case "bool":
		return &Type{PrimType: TypeBool}
	default:
		// Could be a message type or an enum
		if strings.HasPrefix(protoType, "repeated ") {
			// Handle repeated fields (lists)
			elementType := strings.TrimPrefix(protoType, "repeated ")
			return &Type{
				PrimType: TypeList,
				ListType: ptl.ConvertProtoTypeToEffectusType(elementType),
			}
		} else if strings.HasPrefix(protoType, "map<") && strings.HasSuffix(protoType, ">") {
			// Handle map fields
			mapTypes := strings.TrimPrefix(strings.TrimSuffix(protoType, ">"), "map<")
			parts := strings.Split(mapTypes, ",")
			if len(parts) == 2 {
				keyType := strings.TrimSpace(parts[0])
				valType := strings.TrimSpace(parts[1])
				return &Type{
					PrimType:   TypeMap,
					MapKeyType: ptl.ConvertProtoTypeToEffectusType(keyType),
					MapValType: ptl.ConvertProtoTypeToEffectusType(valType),
				}
			}
		}

		// Default to custom named type for now
		return &Type{
			Name:     protoType,
			PrimType: TypeUnknown,
		}
	}
}

// RegisterProtoVerbTypes loads and registers type information for the effect verbs from proto files
func RegisterProtoVerbTypes(protoDir string, ts *TypeSystem) error {
	// This would scan the proto directory for verb definitions and register them

	// For example, for each verb proto file:
	// 1. Parse the proto file
	// 2. Extract argument types and return type
	// 3. Register the verb with the type system

	// Just a placeholder for now
	verbs := []string{"CreateOrder", "SendEmail", "ChargeCreditCard"}
	for _, verb := range verbs {
		// Create placeholder type info for common verbs
		argTypes := make(map[string]*Type)
		var returnType *Type

		switch verb {
		case "CreateOrder":
			argTypes["customer_id"] = &Type{PrimType: TypeString}
			argTypes["items"] = &Type{
				PrimType: TypeList,
				ListType: &Type{
					Name:     "OrderItem",
					PrimType: TypeUnknown,
				},
			}
			returnType = &Type{
				Name:     "Order",
				PrimType: TypeUnknown,
			}
		case "SendEmail":
			argTypes["to"] = &Type{PrimType: TypeString}
			argTypes["subject"] = &Type{PrimType: TypeString}
			argTypes["body"] = &Type{PrimType: TypeString}
			returnType = &Type{PrimType: TypeBool}
		case "ChargeCreditCard":
			argTypes["card_id"] = &Type{PrimType: TypeString}
			argTypes["amount"] = &Type{PrimType: TypeFloat}
			returnType = &Type{
				Name:     "PaymentResult",
				PrimType: TypeUnknown,
			}
		}

		ts.RegisterVerbType(verb, argTypes, returnType)
	}

	return nil
}
